--- a/docs/stylesheets/extra.css
+++ b/docs/stylesheets/extra.css
@@ -3,3 +3,8 @@
   --md-primary-fg-color--light: #F0E4E4;
   --md-primary-fg-color--dark:  #000000;
 }
+
+/* docs/stylesheets/extra.css */
+model-viewer {
+  --poster-color: #ffffff00; /* Removes the default grey background */
+}
